--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,7 +8,7 @@ env:           "production"
 
 markdown:      kramdown
 permalink:     pretty
-url:           http://bulma.io
+url:           http://styleguide.planswell.ca
 fontawesome:   https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css
 exclude:       ['fontawesome', 'node_modules', 'templates', '.babelrc', 'bulma-docs.sass', 'docker-compose.yml', 'package.json', 'yarn.lock']
 
